# mamamia

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Dockerfile.client  GETTING_STARTED.md  PROJECT_SUMMARY.md  README.md  TODO.md  conanfile.py  docker-compose.yml
apaga/: INSTALACAO_LOCAL.md  reinstall_dependency.sh  setup_mixr_env.sh
cpp/: CMakeLists.txt
cpp/client/: CMakeLists.txt
cpp/client/include/client/: inference_client.hpp
cpp/client/src/: inference_client.cpp  main.cpp
cpp/common/: CMakeLists.txt
cpp/common/include/common/: config.hpp  logger.hpp  types.hpp
cpp/common/src/: config.cpp  logger.cpp  types.cpp
cpp/manager/include/manager/: api_key_manager.hpp  load_balancer.hpp  manager_server.hpp  worker_registry.hpp
cpp/manager/src/: api_key_manager.cpp  load_balancer.cpp  main.cpp  manager_server.cpp  worker_registry.cpp
cpp/mixr-platform/mixr-3rdpartysrc/: README.md  build_libs.sh
cpp/mixr_dev/: setenv.sh
cpp/mixr_dev/mixr-3rdparty/lib/: libcigicl.la  libfl.la  libfl_pic.la  libprotobuf-lite.la  libprotobuf.la  libprotoc.la  libzmq.la  libzmq.so.5.1.5
cpp/mixr_dev/mixr-3rdparty/lib/pkgconfig/: cigicl.pc  libzmq.pc  protobuf-lite.pc  protobuf.pc
cpp/mixr_dev/mixr-3rdparty/lib64/pkgconfig/: openscenegraph-osg.pc  openscenegraph-osgAnimation.pc  openscenegraph-osgDB.pc  openscenegraph-osgFX.pc  openscenegraph-osgGA.pc  openscenegraph-osgManipulator.pc  openscenegraph-osgParticle.pc  openscenegraph-osgShadow.pc  openscenegraph-osgSim.pc  openscenegraph-osgTerrain.pc  openscenegraph-osgText.pc  openscenegraph-osgUtil.pc  openscenegraph-osgViewer.pc  openscenegraph-osgVolume.pc  openscenegraph-osgWidget.pc  openscenegraph.pc  openthreads.pc
cpp/mixr_dev/mixr-3rdparty/share/info/: bison.info  dir
cpp/mixr_dev/mixr-3rdparty/share/man/man1/: bison.1  yacc.1
cpp/mixr_dev/mixr-3rdpartysrc/: build_libs.sh
cpp/test/: main.cpp
cpp/worker/: CMakeLists.txt
cpp/worker/include/worker/: inference_engine.hpp  model_loader.hpp  worker_server.hpp
cpp/worker/src/: inference_engine.cpp  main.cpp  model_loader.cpp  worker_server.cpp
deploy/docker/: api-gateway.Dockerfile  worker.Dockerfile
docker/: Dockerfile.client  Dockerfile.mixr  Dockerfile.worker  manager.Dockerfile  web.Dockerfile
docs/: architecture.md
models/: README.md  test_models.py
proto/: common.proto  manager.proto  worker.proto
python/: README.md  requirements.txt  setup.py
python/api_gateway/: main.py
python/cli/: main.py
python/models/: test_models.py
python/scripts/: create_test_models.py
python/sdk/: client.py
scripts/: build.sh  build_client_docker.sh  build_worker_docker.sh  install_mixr.sh  install_onnx.sh
web/: package.json
